// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FelaAdapter LTR global sheet flushes and purges global styles from the DOM 1`] = `
"body {margin: 0;}
html {height: 100%;}
a {color: red;}
ul {margin: 0;}"
`;

exports[`FelaAdapter LTR global sheet flushes and purges global styles from the DOM 2`] = `""`;

exports[`FelaAdapter LTR global sheet flushes and purges global styles from the DOM 3`] = `""`;

exports[`FelaAdapter LTR style sheet converts unified syntax to native syntax and transforms to a class name 1`] = `
"@-webkit-keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@-moz-keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@font-face {font-family: \\"Roboto\\"; font-style: normal; font-weight: normal; src: url('fonts/Roboto.woff2') format('woff2'),url('fonts/Roboto.ttf') format('truetype');}
.a {margin: 0;}
.b {padding: 6px 12px;}
.c {border: 1px solid #2e6da4;}
.d {border-radius: 4px;}
.e {display: inline-block;}
.f {cursor: pointer;}
.g {font-family: Roboto;}
.h {font-weight: normal;}
.i {line-height: normal;}
.j {white-space: nowrap;}
.k {text-decoration: none;}
.l {text-align: left;}
.m {background-color: #337ab7;}
.n {vertical-align: middle;}
.o {color: rgba(0, 0, 0, 0);}
.p {animation-name: k1;}
.q {animation-duration: .3s;}
.t::before {content: \\"★\\";}
.u::before {display: inline-block;}
.v::before {vertical-align: middle;}
.w::before {margin-right: 5px;}
.r:hover {background-color: #286090;}
.s:hover {border-color: #204d74;}
@media (max-width: 600px) { .x {padding: 4px 8px;} }"
`;

exports[`FelaAdapter LTR style sheet converts unified syntax to native syntax and transforms to a class name 2`] = `"a b c d e f g h i j k l m n o p q r s t u v w x"`;

exports[`FelaAdapter LTR style sheet flushes and purges all styles from the DOM 1`] = `".a {display: block;}"`;

exports[`FelaAdapter LTR style sheet flushes and purges all styles from the DOM 2`] = `"a"`;

exports[`FelaAdapter LTR style sheet flushes and purges all styles from the DOM 3`] = `""`;

exports[`FelaAdapter LTR style sheet handles @fallbacks 1`] = `
".a {background: linear-gradient(...);}
.b {display: flex;}
.c {color: blue;}"
`;

exports[`FelaAdapter LTR style sheet handles @fallbacks 2`] = `"a b c"`;

exports[`FelaAdapter LTR style sheet handles @media 1`] = `
".a {color: red;}
.b {padding-left: 10px;}
@media (min-width: 300px) { .c {color: blue;}
.d {padding-left: 15px;} }
@media (max-width: 1000px) { .e {color: green;}
.f {padding-left: 20px;} }"
`;

exports[`FelaAdapter LTR style sheet handles @media 2`] = `"a b c d e f"`;

exports[`FelaAdapter LTR style sheet handles @supports 1`] = `
".a {display: block;}
@supports not (display: flex) {.c {float: left;}}
@supports (display: flex) {.b {display: flex;}}"
`;

exports[`FelaAdapter LTR style sheet handles @supports 2`] = `"a b c"`;

exports[`FelaAdapter LTR style sheet handles attribute selectors 1`] = `
".a {display: block;}
.b[disabled] {opacity: 0.5;}"
`;

exports[`FelaAdapter LTR style sheet handles attribute selectors 2`] = `"a b"`;

exports[`FelaAdapter LTR style sheet handles descendant selectors 1`] = `
".a {margin: 0;}
.b {padding: 0;}
.c> li {list-style: bullet;}"
`;

exports[`FelaAdapter LTR style sheet handles descendant selectors 2`] = `"a b c"`;

exports[`FelaAdapter LTR style sheet handles inline @font-face 1`] = `
"@font-face {font-family: \\"Roboto\\"; font-style: normal; font-weight: normal; src: url('fonts/Roboto.woff2') format('woff2'),url('fonts/Roboto.ttf') format('truetype');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: normal; src: url('fonts/Circular.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: italic; font-weight: normal; src: url('fonts/Circular-Italic.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: 300; src: url('fonts/Circular-Light.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: 700; src: url('fonts/Circular-Bold.woff2') format('woff2');}
.a {font-family: Circular, OtherFont, Roboto;}"
`;

exports[`FelaAdapter LTR style sheet handles inline @font-face 2`] = `"a"`;

exports[`FelaAdapter LTR style sheet handles inline @keyframes 1`] = `
"@-webkit-keyframes k1 { 
  0% {left: 0%;} 
  50% {left: 50%;} 
  100% {left: 100%;} 
}
@-moz-keyframes k1 { 
  0% {left: 0%;} 
  50% {left: 50%;} 
  100% {left: 100%;} 
}
@keyframes k1 { 
  0% {left: 0%;} 
  50% {left: 50%;} 
  100% {left: 100%;} 
}
@-webkit-keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@-moz-keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.a {animation-name: k1, unknown, k2;}"
`;

exports[`FelaAdapter LTR style sheet handles inline @keyframes 2`] = `"a"`;

exports[`FelaAdapter LTR style sheet handles multiple selectors (comma separated) 1`] = `
".a {cursor: pointer;}
.b:disabled {cursor: default;}
.c[disabled] {cursor: default;}
.d> span {cursor: default;}"
`;

exports[`FelaAdapter LTR style sheet handles multiple selectors (comma separated) 2`] = `"a b c d"`;

exports[`FelaAdapter LTR style sheet handles nested @media 1`] = `
".a {color: red;}
@media (min-width: 300px) { .b {color: blue;} }
@media (min-width: 300px) and (max-width: 1000px) { .c {color: green;} }"
`;

exports[`FelaAdapter LTR style sheet handles nested @media 2`] = `"a b c"`;

exports[`FelaAdapter LTR style sheet handles properties 1`] = `
".a {color: black;}
.b {display: inline;}
.c {margin-right: 10px;}
.d {padding: 0;}"
`;

exports[`FelaAdapter LTR style sheet handles properties 2`] = `"a b c d"`;

exports[`FelaAdapter LTR style sheet handles pseudo selectors 1`] = `
".a {position: fixed;}
.c::before {position: absolute;}
.b:hover {position: static;}"
`;

exports[`FelaAdapter LTR style sheet handles pseudo selectors 2`] = `"a b c"`;

exports[`FelaAdapter LTR style sheet handles raw CSS 1`] = `
".felaadapter-button {display: 'block'; font-size: 16px; text-align: 'left';}
.felaadapter-button:hover {color: 'red';}
.felaadapter-button {vertical-align: 'middle';}
@media (max-width:600px) {.felaadapter-button {display: 'none';}}
@supports (display:-webkit-box) or (display:-webkit-flex) or (display:-ms-flexbox) or (display:flex) {.felaadapter-button {display: 'flex';}}"
`;

exports[`FelaAdapter LTR style sheet handles raw CSS 2`] = `""`;

exports[`FelaAdapter RTL global sheet flushes and purges global styles from the DOM 1`] = `
"body {margin: 0;}
html {height: 100%;}
a {color: red;}
ul {margin: 0;}"
`;

exports[`FelaAdapter RTL global sheet flushes and purges global styles from the DOM 2`] = `""`;

exports[`FelaAdapter RTL global sheet flushes and purges global styles from the DOM 3`] = `""`;

exports[`FelaAdapter RTL style sheet converts unified syntax to native syntax and transforms to a class name 1`] = `
"@-webkit-keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@-moz-keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@keyframes k1 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@font-face {font-family: \\"Roboto\\"; font-style: normal; font-weight: normal; src: url('fonts/Roboto.woff2') format('woff2'),url('fonts/Roboto.ttf') format('truetype');}
.a {margin: 0;}
.b {padding: 6px 12px;}
.c {border: 1px solid #2e6da4;}
.d {border-radius: 4px;}
.e {display: inline-block;}
.f {cursor: pointer;}
.g {font-family: Roboto;}
.h {font-weight: normal;}
.i {line-height: normal;}
.j {white-space: nowrap;}
.k {text-decoration: none;}
.l {text-align: right;}
.m {background-color: #337ab7;}
.n {vertical-align: middle;}
.o {color: rgba(0, 0, 0, 0);}
.p {animation-name: k1;}
.q {animation-duration: .3s;}
.t::before {content: \\"★\\";}
.u::before {display: inline-block;}
.v::before {vertical-align: middle;}
.w::before {margin-left: 5px;}
.r:hover {background-color: #286090;}
.s:hover {border-color: #204d74;}
@media (max-width: 600px) { .x {padding: 4px 8px;} }"
`;

exports[`FelaAdapter RTL style sheet converts unified syntax to native syntax and transforms to a class name 2`] = `"a b c d e f g h i j k l m n o p q r s t u v w x"`;

exports[`FelaAdapter RTL style sheet flushes and purges all styles from the DOM 1`] = `".a {display: block;}"`;

exports[`FelaAdapter RTL style sheet flushes and purges all styles from the DOM 2`] = `"a"`;

exports[`FelaAdapter RTL style sheet flushes and purges all styles from the DOM 3`] = `""`;

exports[`FelaAdapter RTL style sheet handles @fallbacks 1`] = `
".a {background: linear-gradient(...);}
.b {display: flex;}
.c {color: blue;}"
`;

exports[`FelaAdapter RTL style sheet handles @fallbacks 2`] = `"a b c"`;

exports[`FelaAdapter RTL style sheet handles @media 1`] = `
".a {color: red;}
.b {padding-right: 10px;}
@media (min-width: 300px) { .c {color: blue;}
.d {padding-right: 15px;} }
@media (max-width: 1000px) { .e {color: green;}
.f {padding-right: 20px;} }"
`;

exports[`FelaAdapter RTL style sheet handles @media 2`] = `"a b c d e f"`;

exports[`FelaAdapter RTL style sheet handles @supports 1`] = `
".a {display: block;}
@supports not (display: flex) {.c {float: right;}}
@supports (display: flex) {.b {display: flex;}}"
`;

exports[`FelaAdapter RTL style sheet handles @supports 2`] = `"a b c"`;

exports[`FelaAdapter RTL style sheet handles attribute selectors 1`] = `
".a {display: block;}
.b[disabled] {opacity: 0.5;}"
`;

exports[`FelaAdapter RTL style sheet handles attribute selectors 2`] = `"a b"`;

exports[`FelaAdapter RTL style sheet handles descendant selectors 1`] = `
".a {margin: 0;}
.b {padding: 0;}
.c> li {list-style: bullet;}"
`;

exports[`FelaAdapter RTL style sheet handles descendant selectors 2`] = `"a b c"`;

exports[`FelaAdapter RTL style sheet handles inline @font-face 1`] = `
"@font-face {font-family: \\"Roboto\\"; font-style: normal; font-weight: normal; src: url('fonts/Roboto.woff2') format('woff2'),url('fonts/Roboto.ttf') format('truetype');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: normal; src: url('fonts/Circular.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: italic; font-weight: normal; src: url('fonts/Circular-Italic.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: 300; src: url('fonts/Circular-Light.woff2') format('woff2');}
@font-face {font-family: \\"Circular\\"; font-style: normal; font-weight: 700; src: url('fonts/Circular-Bold.woff2') format('woff2');}
.a {font-family: Circular, OtherFont, Roboto;}"
`;

exports[`FelaAdapter RTL style sheet handles inline @font-face 2`] = `"a"`;

exports[`FelaAdapter RTL style sheet handles inline @keyframes 1`] = `
"@-webkit-keyframes k1 { 
  0% {right: 0%;} 
  50% {right: 50%;} 
  100% {right: 100%;} 
}
@-moz-keyframes k1 { 
  0% {right: 0%;} 
  50% {right: 50%;} 
  100% {right: 100%;} 
}
@keyframes k1 { 
  0% {right: 0%;} 
  50% {right: 50%;} 
  100% {right: 100%;} 
}
@-webkit-keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@-moz-keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
@keyframes k2 { 
  from {opacity: 0;} 
  to {opacity: 1;} 
}
.a {animation-name: k1, unknown, k2;}"
`;

exports[`FelaAdapter RTL style sheet handles inline @keyframes 2`] = `"a"`;

exports[`FelaAdapter RTL style sheet handles multiple selectors (comma separated) 1`] = `
".a {cursor: pointer;}
.b:disabled {cursor: default;}
.c[disabled] {cursor: default;}
.d> span {cursor: default;}"
`;

exports[`FelaAdapter RTL style sheet handles multiple selectors (comma separated) 2`] = `"a b c d"`;

exports[`FelaAdapter RTL style sheet handles nested @media 1`] = `
".a {color: red;}
@media (min-width: 300px) { .b {color: blue;} }
@media (min-width: 300px) and (max-width: 1000px) { .c {color: green;} }"
`;

exports[`FelaAdapter RTL style sheet handles nested @media 2`] = `"a b c"`;

exports[`FelaAdapter RTL style sheet handles properties 1`] = `
".a {color: black;}
.b {display: inline;}
.c {margin-left: 10px;}
.d {padding: 0;}"
`;

exports[`FelaAdapter RTL style sheet handles properties 2`] = `"a b c d"`;

exports[`FelaAdapter RTL style sheet handles pseudo selectors 1`] = `
".a {position: fixed;}
.c::before {position: absolute;}
.b:hover {position: static;}"
`;

exports[`FelaAdapter RTL style sheet handles pseudo selectors 2`] = `"a b c"`;

exports[`FelaAdapter RTL style sheet handles raw CSS 1`] = `
".felaadapter-button {display: 'block'; font-size: 16px; text-align: 'right';}
.felaadapter-button:hover {color: 'red';}
.felaadapter-button {vertical-align: 'middle';}
@media (max-width:600px) {.felaadapter-button {display: 'none';}}
@supports (display:-webkit-box) or (display:-webkit-flex) or (display:-ms-flexbox) or (display:flex) {.felaadapter-button {display: 'flex';}}"
`;

exports[`FelaAdapter RTL style sheet handles raw CSS 2`] = `""`;
